# wraith-w75-macos

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 00-background-and-goals.md  01-repository-structure.md  02-architecture-and-data-flow.md  03-wraith-protocol.md  04-wraith-core.md  05-cli-examples-and-packaging.md  06-testing-and-ci.md  07-macos-hid-and-troubleshooting.md  08-reverse-engineering-sources.md  09-decisions-and-non-goals.md  10-roadmap.md  11-command-map.md  12-hardware-compatibility.md  README.md
docs/examples/: debug-probe-test-rgb-confirm.known-good.json
examples/: w75_demo.py
tests/: test_analog.py  test_cli.py  test_crc.py  test_diagnostics.py  test_integration.py  test_lighting.py
wraith_api/: __init__.py
wraith_cli/: __init__.py  main.py
wraith_core/: __init__.py  connection_manager.py  diagnostics.py  exceptions.py
wraith_protocol/: __init__.py  analog.py  crc.py  lighting.py  packet.py
